--- a/css/swadetools.css
+++ b/css/swadetools.css
@@ -39,7 +39,7 @@ align-items: center;
     vertical-align: middle;
 }
 
-.item-image, .item.weapon .item-img,.item-show, .item.weapon .damage,.powers-list h4.item-name, .item-list .item.weapon h4 {
+.item-image, .item.weapon .item-img,.item-show, .item.weapon .damage,.powers-list h4.item-name, .item-list .item.weapon h4, ol.skill-list li.item.skill img.skill-icon {
     cursor: pointer;
 }
 
