--- a/css/swadetools.css
+++ b/css/swadetools.css
@@ -13,6 +13,17 @@ position:relative;
 align-items: center;
 }
 
+.swadetools-formline {
+    display:flex;
+    position:relative;
+    align-items: center;
+    margin-bottom:10px;
+    }
+
+    input.swadetools-bullets-field {
+        width:80px;
+        margin-left:10px;
+    }
 .swadetools-mod-add label,.swadetools-mod-add input {
     flex:1
 }
