--- a/css/swadetools.css
+++ b/css/swadetools.css
@@ -70,21 +70,48 @@ margin-top:3px
     padding-left:30px;
     text-align: left;
 }
+button.swadetools-rollbutton i {
+    margin-right:0;
+}
 
-button.swadetools-bennyrerroll {
-   
+.swadetools-rollbuttonwrap {
+    bottom: 5px;
+    position: absolute;
+    display: flex;
+    width: 100%;
+    padding-left: 3px;
+}
+button.swadetools-rollbutton {
     padding-top: 2px;
     width: 20px;
     height: 20px;
-    position: absolute;
-    right: 3px;
-    bottom: 3px;
+    
     border: 1px solid #737171;
     border-radius: 3px;
+    cursor: pointer;
+    
+    line-height: 1;
+    padding: 2px;
+    font-size: 13px;
+    color:#50442a;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+button.swadetools-bennyrerroll {
+   
+    position:absolute;
+    right: 3px;
+    bottom:0;
+    
     background: url(../icons/benny.png) no-repeat center center #f3f3e7;
     background-size: 90%;
-    cursor: pointer;
+   
 }
+
+
 
 .swadetools-criticalfailure {
     background: #b10505;
@@ -339,6 +366,19 @@ width: calc(100% - 47px);
             border: none;
             height: 12px;
             margin-bottom: -1px;
+        }
+
+        .swadetools-gmmodtotalnumber {
+            position: absolute;
+            bottom: 0;
+            background: #aaaaaa;
+            width: 100%;
+            text-align: center;
+            z-index: 1;
+        }
+
+        .swadetools-gmmodtotal {
+            position:relative;
         }
 /*     .swadetools-targetwrap a,
     .swadetools-targetwrap.swadetools-damage-with-soak a.swadetools-applydamage, 
