--- a/templates/setting-name.html
+++ b/templates/setting-name.html
@@ -8,6 +8,12 @@
     <p class="notes">{{localize "SWADETOOLS.SettingFightingHint"}}</p>
     </div>
 
+    <div class="form-group">
+      <label>{{localize "SWADETOOLS.Shooting"}}</label>
+      <div class="form-fields"><input type="text" name="shootingSkill" id="shootingSkill" value="{{shootingName}}"/></div>
+      <p class="notes">{{localize "SWADETOOLS.SettingShootingHint"}}</p>
+      </div>
+
   {{{formHtml}}}
 <button type="submit"><i class="far fa-save"></i>{{localize "SETTINGS.Save"}}</button>
 </form>
