--- a/css/swadetools.css
+++ b/css/swadetools.css
@@ -350,11 +350,17 @@ width: calc(100% - 47px);
         .swadetools-rof-results {
             flex:1
         }
-        .swadetools-damage-actions {
+        .swadetools-damage-actions,
+        .swadetools-power-modifiers {
             grid-column: span 2;
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-gap: 3px 10px;
+        }
+
+        .swadetools-power-modifiers label {
+            display: flex;
+            align-items: center;
         }
 
         .swadetools-damage-actions.swadetools-mid-title {
